<resources>
    <string name="app_name">Shoppe Control Panel</string>
    <string name="shoppe">SHOPPE</string>
    <string name="slogan">Beautiful inside out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hoppe">HOPPE</string>
    <string name="S">S</string>
    <string name="search">Search</string>
    <string name="manage">Manage</string>
    <string name="add_product">Add product</string>
    <string name="add_offer">Add offer</string>
    <string name="qty">QTY:</string>
    <string name="see_more">See more</string>
    <string name="sold">Sold</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_description">Product discription</string>
    <string name="product_category">Product category</string>
    <string name="more_info">More informations</string>
    <string name="discount">Discount</string>
    <string name="product_width">Product width</string>
    <string name="product_length">Product length</string>
    <string name="product_height">Product height</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_information">"Product information "</string>
    <string name="products">PRODUCTS</string>
    <string name="complete_your_data">Complete your data</string>
    <string name="product_added">Product added</string>
    <string name="error_msg_1">Something went wrong, please try again later</string>
    <string name="no_image_selected">No image selected</string>
    <string name="something_went_wrong">Something went wrong, please check your data and try agaim later</string>
    <string name="product">Product</string>
    <string name="share">Share</string>
    <string name="add_to_cart">add to cart</string>
    <string name="edit">Edit</string>
    <string name="view_more">View more</string>
    <string name="description">Description</string>
    <string name="temp_desc_1">Water Resistant and no charging required. Lock and unlock your smart phone or tablet quickly, hide the app when you leave your smart phone alone. Control applications, you can write a fixed process list ahead of the time, and the ring will start the applications each time by simply touch. Share and transfer information, support all Android and Windows NFC mobiles. Multi-functional NFC smart ring, the main function is to store and exce personal information, as well as mobile content and personal privacy encryption unlock. Functions: set up smart lock, card recharge, smart phone unlock, phone important file lock, transfer files.</string>
    <string name="additional_information">Additional information</string>
    <string name="edit_product">Edit Product</string>
</resources>