<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <include
        android:id="@+id/search_layout"
        layout="@layout/layout_light_gray_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_float_action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:backgroundTint="@color/accent"
        android:fontFamily="@font/dm_sans"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/manage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:icon="@drawable/ic_edit"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_product_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:contentDescription="@string/add_product"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toTopOf="@id/extended_float_action_btn"
        app:layout_constraintEnd_toEndOf="@id/extended_float_action_btn"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_offer_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_14sdp"
        android:contentDescription="@string/add_product"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toTopOf="@id/add_product_fab"
        app:layout_constraintEnd_toEndOf="@id/extended_float_action_btn"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/add_product_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/dm_sans"
        android:paddingStart="@dimen/_4sdp"
        android:paddingEnd="@dimen/_4sdp"
        android:text="@string/add_product"
        android:textColor="@color/white"
        android:background="@color/accent"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="@id/add_product_fab"
        app:layout_constraintEnd_toStartOf="@id/add_product_fab"
        app:layout_constraintTop_toTopOf="@id/add_product_fab" />

    <TextView
        android:id="@+id/add_offer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/dm_sans"
        android:paddingStart="@dimen/_4sdp"
        android:paddingEnd="@dimen/_4sdp"
        android:text="@string/add_offer"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="@id/add_offer_fab"
        app:layout_constraintEnd_toStartOf="@id/add_offer_fab"
        app:layout_constraintTop_toTopOf="@id/add_offer_fab" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_rec_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        tools:listitem="@layout/item_product_horizontal"/>


</androidx.constraintlayout.widget.ConstraintLayout>